--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fsvw",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/jondashkyle/fsvw/issues"
   },
-  "homepage": "https://github.com/jondashkyle/fsvw#readme"
+  "homepage": "https://github.com/jondashkyle/fsvw#readme",
+  "dependencies": {
+    "xtend": "^4.0.1"
+  },
+  "devDependencies": {
+    "tape": "^4.8.0"
+  }
 }
